css/style.css
/* Imports ========================================= */
@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap');
/* Fonts: 'Alata', 'Josefin Sans' */

/* Colors ========================================= */
:root {
  --white: #ffffff;
  --black: #000000;
  --dark-gray: #8c8c8c;
  --very-dark-gray: #696969;
}

/* Global Settings ========================================= */
* {
  margin: 0; padding: 0; box-sizing: border-box;
}

html {
  font-size: 93.75%;
}

body {
  width: 100%;
}

a {
  text-decoration: none;
  color: unset;
}

ul, li {
  list-style: none;
}

/* Header ========================================= */
header {
  width: 100%;
  color: var(--white);
  font-family: 'Josefin Sans', sans-serif;
}

.header-container {
  width: min(90vw, 1200px);
  height: 100%;
  margin: 0 auto;
}

.header-container > nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-logo > a {
  display: flex;
  align-items: center;
}

nav > .header-links {
  display: flex;
  align-items: center;
  font-weight: bold;
}

.menu-hamburger {
  display: none;
}

.header-title-container {
  height: 100%;
  display: flex;
  align-items: center;
}

.header-title-container > h1 {
  font-weight: 300;
  text-transform: uppercase;

  border: 2.5px solid var(--white);
}

/* Title ========================================= */
.title {
  font-family: 'Josefin Sans', sans-serif;
  color: var(--black);
  font-weight: 300;
  text-transform: uppercase;
}

/* About ========================================= */
#about > .about-content > p {
  font-family: 'Alata', sans-serif;
  color: var(--dark-gray);
}

/* Our Creations ========================================= */
#creations > .cards {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

#creations > .button-container > button {
  font-family: 'Alata', sans-serif;
  text-transform: uppercase;
  letter-spacing: .4rem;

  background-color: var(--white);
  border: 2px solid var(--dark-gray);
  border-radius: 3px;
  padding: .5rem 2.3rem;
}

#creations > .cards > h3 {
  font-family: 'Josefin Sans', sans-serif;
  text-transform: uppercase;
  font-weight: lighter;
  color: var(--white);
  user-select: none;
}

/* Footer ========================================= */
footer {
  width: 100%;
  background-color: var(--black);
  font-family: 'Josefin Sans', sans-serif;
  font-weight: bold;
}

.footer-container {
  width: 90vw;
  margin: 0 auto;
}

.footer-container > .social-medias {
  display: flex;
  gap: 1.2rem;
}

.footer-container > .footer-links {
  color: var(--white);
}

.footer-container > .footer-rights {
  color: var(--very-dark-gray);
}

/* Desktop Screen ========================================= */
@media (min-width: 801px) {
  /* Header ================ */
  header {
    background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/desktop/image-hero.jpg') top center no-repeat;
    background-size: cover;
    height: max(70vh, 650px);
    margin-bottom: 10rem;
  }
  nav > ul {
    gap: 2rem;
  }
  .header-container {
    padding: 4rem 0;
  }
  .header-title-container {
    width: 650px;
  }
  .header-title-container > h1 {
    font-size: 4.5rem;
    padding: 2rem;
    letter-spacing: .4rem;
  }

  /* Title ================ */
  .title {
    font-size: 3rem;
  }

  /* About ================ */
  section#about {
    width: min(90vw, 1200px);
    height: calc(504px + 75px);
    margin: 0 auto 10rem auto;
  }
  #about > .image-interactive {
    width: 100%;
  }
  #about > .about-content {
    max-width: 700px;
    position: relative;
    top: -15rem;
    margin-left: auto;
    z-index: 1;
    
    background-color: var(--white);
    padding: 5rem;
  }
  #about > .about-content > h2 {
    margin-bottom: 2rem;
  }
  #about > .about-content > p {
    font-size: 1.25rem;
  }
  
  /* Our Creations ================ */
  #creations {
    width: min(90vw, 1200px);
    margin: 0 auto 10rem auto;

    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
  }
  #creations > .title {
    grid-column: 1 / 3;
    margin-bottom: 4rem;
  }
  #creations > .button-container {
    grid-column: 3 / 5;
    margin-bottom: 4rem;

    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
  }
  #creations > .button-container > button {
    font-size: 1.15rem;
  }

  /* Creations Cards ================ */
  #creations > .cards {
    height: 500px;
    background-color: var(--black);
    box-shadow: inset 0 -8rem 5rem rgba(0, 0, 0, .6);

    display: flex;
    align-items: center;
  }
  #creations > .cards > h3 {
    width: 80%;
    height: 85%;
    margin: 0 auto;
    font-size: min(2.5rem, 3vw);

    display: flex;
    align-items: flex-end;
  }
  #creations > .cards:nth-of-type(1) {
    background-image: url('../images/desktop/image-deep-earth.jpg');
  }
  #creations > .cards:nth-of-type(2) {
    background-image: url('../images/desktop/image-night-arcade.jpg');
  }
  #creations > .cards:nth-of-type(3) {
    background-image: url('../images/desktop/image-soccer-team.jpg');
  }
  #creations > .cards:nth-of-type(4) {
    background-image: url('../images/desktop/image-grid.jpg');
  }
  #creations > .cards:nth-of-type(5) {
    background-image: url('../images/desktop/image-from-above.jpg');
  }
  #creations > .cards:nth-of-type(6) {
    background-image: url('../images/desktop/image-pocket-borealis.jpg');
  }
  #creations > .cards:nth-of-type(7) {
    background-image: url('../images/desktop/image-curiosity.jpg');
  }
  #creations > .cards:nth-of-type(8) {
    background-image: url('../images/desktop/image-fisheye.jpg');
  }

  /* Footer ================ */
  .footer-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5rem 1rem;

    padding: 3rem 0 4rem 0;
  }
  .footer-container > .footer-links {
    display: flex;
    gap: 1.5rem;
  }
  .footer-container > .social-medias {
    justify-content: flex-end; 
  }
  .footer-container > .footer-rights {
    text-align: right;
  }
}

/* Mobile Screen ========================================= */
@media (max-width: 800px) {
  /* Header ================ */
  header {
    background: url('../images/mobile/image-hero.jpg') center center no-repeat;
    background-size: cover;
    height: max(80vh, 350px);
    margin-bottom: 8rem;
  }
  nav > ul {
    display: none;
  }
  .header-logo > a > img {
    height: max(3.5vh, 1.5rem);
  }
  .menu-hamburger {
    display: flex;
    align-items: center;

    width: 35px;
    height: 20px;
  }
  .menu-hamburger > img {
    width: 100%;
    height: auto;
  }
  .header-container {
    padding: 3rem 0;
  }
  .header-title-container {
    width: min(100%, 500px);
  }
  .header-title-container > h1 {
    width: 100%;
    padding: 1rem;
    letter-spacing: .2rem;
    font-size: min(10vw, 3rem);
  }

  /* Title ================ */
  .title {
    font-size: max(2.4rem, 5vw);
    text-align: center;
  }

  /* About ================ */
  section#about {
    width: 100%;
    margin-bottom: 10rem;
  }
  #about > .image-interactive {
    width: 90vw;
    margin: 0 auto 4rem auto;
  }
  .image-interactive > img {
    width: 100%;
    height: auto;
  }
  #about > .about-content {
    width: 85vw;
    margin: 0 auto;
  }
  #about > .about-content > .title {
    margin-bottom: 2rem;
  }
  #about > .about-content > p {
    font-size: 1.2rem;
    text-align: center;
  }

  /* Our Creations ================ */
  #creations {
    width: 90vw;
    margin: 0 auto;

    display: flex;
    flex-direction: column;
    gap: 2rem;
  }
  #creations > .title {
    margin-bottom: 1.5rem;
  }
  #creations > .button-container {
    text-align: center;
    order: 8;
  }
  #creations > .button-container > button {
    font-size: min(1.2rem, 4vw);
  }

  /* Creations Cards ================ */
  #creations > .cards {
    background-color: var(--black);
    height: 200px;

    box-shadow: inset 3rem -5rem 5rem rgba(0, 0, 0, .6);
  }
  #creations > .cards > h3 {
    height: 90%;
    max-width: min(250px, 60vw);
    margin-left: 1.5rem;
    font-size: min(3rem, 10vw);

    display: flex;
    align-items: flex-end;
  }
  #creations > .cards:nth-of-type(1) {
    background-image: url('../images/mobile/image-deep-earth.jpg');
  }
  #creations > .cards:nth-of-type(2) {
    background-image: url('../images/mobile/image-night-arcade.jpg');
  }
  #creations > .cards:nth-of-type(3) {
    background-image: url('../images/mobile/image-soccer-team.jpg');
  }
  #creations > .cards:nth-of-type(4) {
    background-image: url('../images/mobile/image-grid.jpg');
  }
  #creations > .cards:nth-of-type(5) {
    background-image: url('../images/mobile/image-from-above.jpg');
  }
  #creations > .cards:nth-of-type(6) {
    background-image: url('../images/mobile/image-pocket-borealis.jpg');
  }
  #creations > .cards:nth-of-type(7) {
    background-image: url('../images/mobile/image-curiosity.jpg');
  }
  #creations > .cards:nth-of-type(8) {
    background-image: url('../images/mobile/image-fisheye.jpg');
  }
}

